<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_blue">

  <ImageView
    android:id="@+id/image"
    style="@style/AppIntroDefaultImage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/app_intro_image_content_description"
    android:src="@drawable/icon_setting_1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header" />

  <LinearLayout
    android:id="@+id/switches_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image">

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/electricity_switch"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:layout_marginTop="4dp"
      android:text="@string/electricity"
      android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/cold_water_switch"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:layout_marginTop="4dp"
      android:text="@string/cold_water"
      android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/hot_water_switch"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:layout_marginTop="4dp"
      android:text="@string/hot_water"
      android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/gas_switch"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:layout_marginTop="4dp"
      android:text="@string/gas"
      android:textSize="18sp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/heat_switch"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:layout_marginTop="4dp"
      android:text="@string/heat"
      android:textSize="18sp" />

  </LinearLayout>

  <TextView
    android:id="@+id/header"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:text="@string/what_meter_do_u_use"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />


</androidx.constraintlayout.widget.ConstraintLayout>