<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.AddApartmentActivity">

  <ListView
    android:id="@+id/meters_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/address_input" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/add_meter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/add_meter"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/add_payment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/add_payment"
    app:layout_constraintBottom_toTopOf="@+id/add_meter"
    app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/add_apartments"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/finish"
    app:layout_constraintBottom_toTopOf="@+id/add_payment"
    app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/address_input"
    android:layout_width="0dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/apartments_address" />
  </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>