<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_blue"
  tools:ignore="LabelFor">

  <ImageView
    android:id="@+id/image"
    style="@style/AppIntroDefaultImage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:contentDescription="@string/app_intro_image_content_description"
    android:src="@drawable/icon_setting_3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/header_tariffs">

    <Button
      android:id="@+id/btn_yes"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/yes"
      android:textSize="18sp"
      android:textColor="@color/white" />

    <Button
      android:id="@+id/btn_no"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/no"
      android:textColor="@color/white"
      android:textSize="18sp"/>
  </LinearLayout>

  <TextView
    android:id="@+id/header"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:text="@string/add_tariff_now"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />


  <TextView
    android:id="@+id/header_tariffs"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:text="@string/want_add_tariff_now"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />


</androidx.constraintlayout.widget.ConstraintLayout>