<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_blue">

  <ImageView
    android:id="@+id/image"
    style="@style/AppIntroDefaultImage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/app_intro_image_content_description"
    android:src="@drawable/icon_setting_2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header" />

  <LinearLayout
    android:id="@+id/lin_lay_radio_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/header_cold_water">

    <RadioGroup
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_cw_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/one"
        android:textSize="18sp" />

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_cw_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/two"
        android:textSize="18sp" />

    </RadioGroup>

    <RadioGroup
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1">

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_hw_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/one"
        android:textSize="18sp" />

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_hw_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/two"
        android:textSize="18sp" />

    </RadioGroup>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/lin_lay2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lin_lay_radio_buttons">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/first_group_text"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:visibility="invisible">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:hint="@string/group_one_placement"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:textSize="18sp"
        android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/second_group_text"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginTop="8dp"
      android:layout_marginStart="18dp"
      android:visibility="invisible">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:hint="@string/group_two_placement"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>


  </LinearLayout>

  <TextView
    android:id="@+id/header_cold_water"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/cold"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/header_hot_water"
    app:layout_constraintTop_toBottomOf="@+id/image"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />

  <TextView
    android:id="@+id/header_hot_water"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hot"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/header_cold_water"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />

  <TextView
    android:id="@+id/header"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:text="@string/how_many_water_meters"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />


</androidx.constraintlayout.widget.ConstraintLayout>