<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_blue"
  tools:ignore="LabelFor">

  <ImageView
    android:id="@+id/image"
    style="@style/AppIntroDefaultImage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:contentDescription="@string/app_intro_image_content_description"
    android:src="@drawable/icon_setting_3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header" />

  <TextView
    android:id="@+id/header"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:text="@string/add_payments"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />


  <TextView
    android:id="@+id/header_payments"
    style="@style/AppIntroDefaultHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:text="@string/type_payment_press_add"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/image"
    app:layout_constraintVertical_chainStyle="spread"
    app:layout_constraintVertical_weight="2" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginHorizontal="8dp"
    android:background="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/input_payments_autocomplete" />

  <com.google.android.flexbox.FlexboxLayout
    android:id="@+id/flex_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_gravity="center_vertical"
    android:minHeight="40dp"
    app:alignContent="space_around"
    app:alignItems="stretch"
    app:flexWrap="wrap"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/input_payments_autocomplete"
    app:showDivider="beginning|middle|end">
  </com.google.android.flexbox.FlexboxLayout>

  <com.google.android.material.textfield.MaterialAutoCompleteTextView
    android:id="@+id/input_payments_autocomplete"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:background="@color/dark_blue"
    android:completionThreshold="3"
    android:hint="@string/internet_TV"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:imeOptions="actionNext"
    android:inputType="textCapSentences"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header_payments"/>

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/add_payment_to_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/add"
    app:layout_constraintTop_toBottomOf="@id/flex_box"
    app:layout_constraintEnd_toEndOf="parent"
    android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>